@@ -79,6 +79,9 @@ Other:
    for doing this work.
  - The database cartridge now statically links the RDKit libraries.
    This should make installation easier.
+ - The RDKit fingerprinter now by default sets 2 bits per hashed
+   subgraph instead of 4. The old behavior can be regained by setting
+   nBitsPerHash to 4.
 
 ******  Release_2010.09.1 *******
 (Changes relative to Release_Q22010_1)
